2018-09-04  Charlie Zender  <zender@uci.edu>

	* Grid diagnosis in nco_rgr_wgt() now recognizes n2s for all rectangular grids

	* Verified nco_grd_nfr() and nco_grd_mk() produce symmetric Gaussian interfaces for s2n and n2s

2018-09-03  Charlie Zender  <zender@uci.edu>

	* Re-implement Gaussian iteration loops so all Gaussian interfaces are symmetric

	* ncremap revert tilde replacement in favor of re-quoting grd_sng

2018-09-02  Charlie Zender  <zender@uci.edu>

	* Expose skl_fl functionality to ncremap

	* Pass flg_s2n to nco_lat_wgt_gss() to allow N->S Gaussian grids

	* ncremap replace spaces in user-defined grid strings (e.g., ttl) with tildes

	* Fix lat_typ for n2s in nco_grd_nfr()

2018-08-31  Charlie Zender  <zender@uci.edu>

	* Implement lat_drc=n2s inferral in nco_grd_nfr()

	* Implement lat_drc=n2s option in nco_grd_mk() for ERAI, ERA5 grids

	* Allow backslash to quote tilde in ttl strings

2018-08-30  Charlie Zender  <zender@uci.edu>

	* Change special grd ttl character from carat to tilde, like LaTeX and NCL

2018-08-30  Charlie Zender  <zender@aerosol>

	* NCO 4.7.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.7-alpha02: Kya Party of 8';git push
	git tag -a 4.7.7-alpha02 -m 'ttl carats;--ignore_degenerate;theta;tags';git push --tags

	* Eliminate ncap.h from nco/src/nco/Makefile.am to fix Tags generation

	* Add ncremap ERWG ignore_degenerate HINT/option for ESMF >= 7.1.0r

2018-08-28  Charlie Zender  <zender@uci.edu>

	* Replace carats with spaces so ncremap users can put carats in place of spaces in ttl

2018-08-23  Charlie Zender  <zender@aerosol>

	* Keep xmllint regression test from writing a file named ":"

	* Include theta.alcf.anl.gov in ncclimo/ncremap paths

2018-08-22  Charlie Zender  <zender@aerosol>

	* Noticed that ncremap -G cannot support whitespace in ttl argument

	* Document DAP whitelist

2018-08-11  Charlie Zender  <zender@aerosol>

	* NCO 4.7.7-alpha01 release procedure: