@@ -46,13 +46,15 @@ ncremap
 .IR par_typ ] [\-R
 .IR rgr_opt ] 
 [\-s
-.IR grd_src ] [\--stdin ]
+.IR grd_src ] [\--skl_fl =
+.IR skl_fl] [\--stdin ]
 [\-T
 .IR drc_tmp ] 
 [\-t
 .IR thr_nbr ] 
 [\-U] [\-u
-.IR unq_sfx ] 
+.IR unq_sfx ] [\--ugrid_fl =
+.IR ugrid_fl] 
 [\-V
 .IR rgr_var ] 
 [\-v
