@@ -1,5 +1,9 @@
 2018-09-04  Charlie Zender  <zender@uci.edu>
 
+	* NCO 4.7.7-alpha03 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.7.7-alpha03: Sober September';git push
+	git tag -a 4.7.7-alpha03 -m 's2n/n2s, gss ntf symmetric, obviate ttl tilde';git push --tags
+
 	* Grid diagnosis in nco_rgr_wgt() now recognizes n2s for all rectangular grids
 
 	* Verified nco_grd_nfr() and nco_grd_mk() produce symmetric Gaussian interfaces for s2n and n2s
